Fixing the explanation of callback

--- a/src/i18n/callback_message.yaml
+++ b/src/i18n/callback_message.yaml
@@ -13,11 +13,11 @@ en:
       DD|MM H:M, DD|MM H, DD|MM
     **__
 
-    **Note: You should write the date before this month's service subscription ends.**
+    **Note: you must write the initial date when the payment was made in this month.**
   started_success: |+
     **ℹ️ The date has been successfully saved**
 
-    __**(Optional)**__ Now, please write the months you have been using this service without counting this month to be paid
+    __**(Optional)**__ Now, please write the months that you've been using this service counting this month that has been paid.
   started_success_button: ⏭️ Skip
   started_failure: |+
     **❌ Error saving the date**
@@ -73,11 +73,11 @@ es:
       DD|MM H:M, DD|MM H, DD|MM
     **__
 
-    **Nota: debe escribir la fecha antes de que finalice la suscripción al servicio de este mes.**
+    **Nota: debe escribir la fecha inicial de cuando se realizo el cobro en este mes.**
   started_success: |+
     **ℹ️ La fecha ha sido guardada con éxito**
 
-    __**(Opcional)**__  Ahora, por favor escribe los meses que llevas usando este servicio sin contar este mes a pagar
+    __**(Opcional)**__  Ahora, por favor escribe los meses que llevas usando este servicio contando este mes que se ha pagado.
   started_success_button: ⏭️ Omitir
   started_failure: |+
     **❌ Error guardando la fecha**
